welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type int
def move(Nbpas:int, versLavant: Boolean){
               ^Program:3: error: reassignment to val
  if (versLavant=true){
                ^Program:4: error: not found: value NbPas
    for (i <- 1 to NbPas){
                   ^