welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(Nbpas:int, versLavant: Boolean){
  if (versLavant=true){
    for (i <- 1 to NbPas){
      avance();
    }
  }
  else {for (i <- 1 to Nbpas){
    recule();}
  }
}